--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <link rel="icon" type="image/x-icon" href="/image/icons8-favicon-50.png">
-  <title>Vite + React</title>
+  <title>Chat App - By Federico Aguirre</title>
 </head>
 
 <body>
